--- a/index.html
+++ b/index.html
@@ -7,16 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
   </head>
   <body>
     <div id="app">
       <div class="container">
         <div class="whatsappWindow">
           <div class="whatsappLeft">
-            <div class="NomeUtente">
+            <div class="nomeUtente">
+              <div class="nuLeft">
+                <div class="nuLimage">
+                  <img src="img/avatar_io.jpg" alt="">
+                </div>
+                <div class="nuLname">
+                  Nome Utente
+                </div>
+
+              </div>
+              <div class="nuRight">
+                <i class="fas fa-circle-notch"></i>
+                <i class="fas fa-comment-alt"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
             </div>
             <div class="riceviNotifiche">
-
+              <div class="rNicona">
+                <i class="fas fa-bell-slash"></i>
+              </div>
+              <div class="rNtext">
+                <div class="rNtextTitle">
+                  Ricevi Notifiche di nuoi messaggi
+                </div>
+                <div class="rNtextSubtitle">
+                  <a href="#">Attiva notifiche desktop</a> 
+                </div>
+              </div>
             </div>
             <div class="cercaOiniziaChat">
 
