--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="app">
       <div class="container">
         <div class="whatsappWindow">
+          <!-- LEFT SIDE -->
           <div class="whatsappLeft">
+
             <div class="nomeUtente">
               <div class="nuLeft">
                 <div class="nuLimage">
@@ -30,6 +32,7 @@
                 <i class="fas fa-ellipsis-v"></i>
               </div>
             </div>
+
             <div class="riceviNotifiche">
               <div class="rNicona">
                 <i class="fas fa-bell-slash"></i>
@@ -39,20 +42,25 @@
                   Ricevi Notifiche di nuoi messaggi
                 </div>
                 <div class="rNtextSubtitle">
-                  <a href="#">Attiva notifiche desktop</a> 
+                  <a href="#">Attiva notifiche desktop</a>
                 </div>
               </div>
             </div>
-            <div class="cercaOiniziaChat">
 
+            <div class="cercaOiniziaChat">
+              <div class="cOiCinputContainer">
+                <i class="fas fa-search"></i>
+                <input type="text" class="cercaChatsearchBar" name="" value="" placeholder="Cerca o inizia una nuova chat">
+              </div>
             </div>
+
             <div class="conversazioni">
 
             </div>
 
-
           </div>
 
+          <!-- RIGHT SIDE -->
           <div class="whatsappRight">
             <div class="navChat">
 
