parte sinistra fatta

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="nuLimage">
                   <img src="img/avatar_io.jpg" alt="">
                 </div>
-                <div class="nuLname">
+                <div class="nuLname bold">
                   Nome Utente
                 </div>
 
@@ -38,7 +38,7 @@
                 <i class="fas fa-bell-slash"></i>
               </div>
               <div class="rNtext">
-                <div class="rNtextTitle">
+                <div class="rNtextTitle bold">
                   Ricevi Notifiche di nuoi messaggi
                 </div>
                 <div class="rNtextSubtitle">
@@ -55,6 +55,109 @@
             </div>
 
             <div class="conversazioni">
+              <div class="convContatto">
+
+                <div class="cCLeft">
+
+                  <div class="cCLimage">
+                    <img src="img/avatar_1.jpg" alt="">
+                  </div>
+
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Michele
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
+              <div class="convContatto">
+
+                <div class="cCLeft">
+
+                  <div class="cCLimage">
+                    <img src="img/avatar_1.jpg" alt="">
+                  </div>
+
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Michele
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
+              <div class="convContatto">
+
+                <div class="cCLeft">
+
+                  <div class="cCLimage">
+                    <img src="img/avatar_1.jpg" alt="">
+                  </div>
+
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Michele
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
+              <div class="convContatto">
+
+                <div class="cCLeft">
+
+                  <div class="cCLimage">
+                    <img src="img/avatar_1.jpg" alt="">
+                  </div>
+
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Michele
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
+
+
+
 
             </div>
 
