--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="conversazioni">
-              <div class="convContatto">
+              <div class="convContatto active">
 
                 <div class="cCLeft">
 
