--- a/index.html
+++ b/index.html
@@ -165,12 +165,38 @@
 
           <!-- RIGHT SIDE -->
           <div class="whatsappRight">
+            <!-- 1/3 navChat -->
             <div class="navChat">
 
+              <div class="navChatLeft">
+                <div class="navChatLimage">
+                  <img src="img/avatar_1.jpg" alt="">
+                </div>
+                <div class="navChatLname">
+
+                  <div class="navChatLnameTitle bold">
+                    <span>Michele</span>
+                  </div>
+                  <div class="navChatLnameSubtitle">
+                    ok...
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="navChatRight">
+                <i class="fas fa-search"></i>
+                <i class="fas fa-paperclip"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+
             </div>
+            <!-- 2/3 Chat grande -->
             <div class="chat">
 
             </div>
+            <!-- 3/3 scrivimessaggio -->
             <div class="scriviMessaggio">
 
             </div>
