--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <!-- LEFT SIDE -->
           <div class="whatsappLeft">
 
+            <!-- 1/4 Nome utente ------------------------------->
             <div class="nomeUtente">
               <div class="nuLeft">
                 <div class="nuLimage">
@@ -32,7 +33,7 @@
                 <i class="fas fa-ellipsis-v"></i>
               </div>
             </div>
-
+            <!-- 2/4 Ricevi notifiche------------------------------------------>
             <div class="riceviNotifiche">
               <div class="rNicona">
                 <i class="fas fa-bell-slash"></i>
@@ -47,14 +48,17 @@
               </div>
             </div>
 
+            <!-- 3/4 cerca o inizia chat----------------------------------------->
             <div class="cercaOiniziaChat">
               <div class="cOiCinputContainer">
                 <i class="fas fa-search"></i>
                 <input type="text" class="cercaChatsearchBar" name="" value="" placeholder="Cerca o inizia una nuova chat">
               </div>
             </div>
-
+            <!-- 4/4 lista conversazionii con utenti------------------------>
             <div class="conversazioni">
+
+              <!-- 1°contatto Michele-->
               <div class="convContatto active">
 
                 <div class="cCLeft">
@@ -80,67 +84,19 @@
                 </div>
 
               </div>
+
+              <!-- 2°contatto Fabio-->
               <div class="convContatto">
 
                 <div class="cCLeft">
 
                   <div class="cCLimage">
-                    <img src="img/avatar_1.jpg" alt="">
+                    <img src="img/avatar_2.jpg" alt="">
                   </div>
 
                   <div class="cCLtext">
                     <div class="cCLtextTitle bold">
-                      Michele
-                    </div>
-                    <div class="cCLtextSubtitle">
-                      ok...
-                    </div>
-                  </div>
-                </div>
-
-                <div class="cCRight">
-                  <div class="cCRtextSubtitle">
-                    20 11 2020 10:52:03
-                  </div>
-                </div>
-
-              </div>
-              <div class="convContatto">
-
-                <div class="cCLeft">
-
-                  <div class="cCLimage">
-                    <img src="img/avatar_1.jpg" alt="">
-                  </div>
-
-                  <div class="cCLtext">
-                    <div class="cCLtextTitle bold">
-                      Michele
-                    </div>
-                    <div class="cCLtextSubtitle">
-                      ok...
-                    </div>
-                  </div>
-                </div>
-
-                <div class="cCRight">
-                  <div class="cCRtextSubtitle">
-                    20 11 2020 10:52:03
-                  </div>
-                </div>
-
-              </div>
-              <div class="convContatto">
-
-                <div class="cCLeft">
-
-                  <div class="cCLimage">
-                    <img src="img/avatar_1.jpg" alt="">
-                  </div>
-
-                  <div class="cCLtext">
-                    <div class="cCLtextTitle bold">
-                      Michele
+                      Fabio
                     </div>
                     <div class="cCLtextSubtitle">
                       ok...
@@ -156,9 +112,59 @@
 
               </div>
 
+              <!-- 3°contatto Samuele-->
+              <div class="convContatto">
 
+                <div class="cCLeft">
 
+                  <div class="cCLimage">
+                    <img src="img/avatar_3.jpg" alt="">
+                  </div>
 
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Samuele
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
+
+              <!-- 4°contatto Luisa-->
+              <div class="convContatto">
+
+                <div class="cCLeft">
+
+                  <div class="cCLimage">
+                    <img src="img/avatar_4.jpg" alt="">
+                  </div>
+
+                  <div class="cCLtext">
+                    <div class="cCLtextTitle bold">
+                      Luisa
+                    </div>
+                    <div class="cCLtextSubtitle">
+                      ok...
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cCRight">
+                  <div class="cCRtextSubtitle">
+                    20 11 2020 10:52:03
+                  </div>
+                </div>
+
+              </div>
             </div>
 
           </div>
@@ -194,22 +200,166 @@
             </div>
             <!-- 2/3 Chat grande -->
             <div class="chat">
+              <!-- 1/4 Michele Chat -->
+              <div class="Michele paginaMessaggiata conversazioneInCorso">
+                <div class="rigaMessaggi flexInv">
+                  <div class="box-chat Inviati">
+                    <div class="mex">
+                      Hai portato a spasso il cane?
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 15:30:55
+                    </div>
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexInv">
+                  <div class="box-chat Inviati">
+                    <div class="mex">
+                      Ricordati di dargli da mangiare
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 15:50:00
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      Tutto fatto!
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 16:15:22
+                    </div>
+
+                  </div>
+                </div>
+
+              </div>
+              <!-- 2/4 Fabio Chat -->
+              <div class="Fabio paginaMessaggiata">
+                <div class="rigaMessaggi flexInv">
+                  <div class="box-chat Inviati">
+                    <div class="mex">
+                      Ciao come stai?
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 16:30:50
+                    </div>
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      Bene grazie! Stasera ci vediamo?
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 16:30:55
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      Mi piacerebbe ma devo andare a fare la spesa.
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 16:35:00
+                    </div>
+
+                  </div>
+                </div>
+
+
+              </div>
+
+              <!-- 3/4 Samuele Chat -->
+              <div class="Samuele paginaMessaggiata">
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      La Marianna va in campagna
+                    </div>
+                    <div class="dataOraMex">
+                      28/03/2020 10:10:40
+                    </div>
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexInv">
+                  <div class="box-chat Inviati">
+                    <div class="mex">
+                      Sicuro di non aver sbagliato chat?
+                    </div>
+                    <div class="dataOraMex">
+                      28/03/2020 10:20:10
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      Ah Scusa!
+                    </div>
+                    <div class="dataOraMex">
+                      28/03/2020 16:15:22
+                    </div>
+
+                  </div>
+                </div>
+
+
+              </div>
+
+              <!-- 4/4 Luisa Chat -->
+              <div class="Luisa paginaMessaggiata">
+                <div class="rigaMessaggi flexInv">
+                  <div class="box-chat Inviati">
+                    <div class="mex">
+                      Lo sai che ha aperto una nuova pizzeria?
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 15:30:55
+                    </div>
+                  </div>
+                </div>
+
+                <div class="rigaMessaggi flexRic">
+                  <div class="box-chat Ricevuti">
+                    <div class="mex">
+                      Si, ma preferirei andare al cinema
+                    </div>
+                    <div class="dataOraMex">
+                      10/01/2020 15:50:00
+                    </div>
+
+                  </div>
+                </div>
+
+              </div>
 
             </div>
             <!-- 3/3 scrivimessaggio -->
             <div class="scriviMessaggio">
-
+              <div class="scriviInputContainer">
+                <i class="far fa-smile"></i>
+                <input type="text" class="scriviChatBar" name="" value="" placeholder="Scrivi un messaggio">
+                <i class="fas fa-microphone"></i>
+              </div>
             </div>
+
           </div>
 
         </div>
 
       </div>
-
-
-
-
-
     </div>
 
 
