--- a/secondo milestone/index.html
+++ b/secondo milestone/index.html
@@ -70,7 +70,8 @@
                           {{contatto.nome}}
                         </div>
                         <div class="cCLtextSubtitle">
-                          ok...
+                          {{contatto.messaggi[contatto.messaggi.length - 1].mex}}
+
                         </div>
 
                       </div>
@@ -80,7 +81,7 @@
                     <div class="cCRight">
                       <div class="cCRtextSubtitle">
                         <div class="">
-                          {{contatto.messaggi[0].dataOraMex}}
+                          {{contatto.messaggi[contatto.messaggi.length - 1].dataOraMex}}
                         </div>
 
                       </div>
@@ -112,7 +113,7 @@
                     <span>{{contatti4[contattiIndice].nome}}</span>
                   </div>
                   <div class="navChatLnameSubtitle">
-                    Ultimo accesso: {{contatti4[contattiIndice].messaggi[0].dataOraMex}}
+                    Ultimo accesso: {{contatti4[contattiIndice].messaggi[contatti4[contattiIndice].messaggi.length - 1].dataOraMex}}
                   </div>
 
                 </div>
