nikolas <3 non mi dimenticherò mai lo scrollDown
la funzione va associata al div in overflow.

--- a/quarto milestone/index.html
+++ b/quarto milestone/index.html
@@ -142,9 +142,9 @@
 
             </div>
             <!-- 2/3 Chat grande -->
-            <div class="chat">
+            <div class="chat" id="chatXY">
 
-              <div class="paginaMessaggiata" id="chatXY"><!--id="chatXY"-->
+              <div class="paginaMessaggiata"><!--id="chatXY"-->
                   <div v-for="elemMex in contatti4[contattiIndice].messaggi">
                     <div class="rigaMessaggi" :class="elemMex.invOric">
                       <div class="box-chat" :class="elemMex.colore">
