--- a/quarto milestone/index.html
+++ b/quarto milestone/index.html
@@ -135,8 +135,14 @@
               </div>
 
               <div class="navChatRight">
+                
                 <i class="fas fa-search"></i>
+
+                <label for="file-upload" class="custom-file-upload">
                 <i class="fas fa-paperclip"></i>
+                </label>
+                <input id="file-upload" type="file"/>
+
                 <i class="fas fa-ellipsis-v"></i>
               </div>
 
