--- a/quarto milestone/index.html
+++ b/quarto milestone/index.html
@@ -22,10 +22,10 @@
             <div class="nomeUtente">
               <div class="nuLeft">
                 <div class="nuLimage">
-                  <img src="img/avatar_io.jpg" alt="">
+                  <img src="img/ash_k.jpg" alt="">
                 </div>
                 <div class="nuLname bold">
-                  Nome Utente
+                  Ash Ketchup
                 </div>
 
               </div>
